# THADAM2

./: .replit  README.md  index.html  package-lock.json  package.json  pyproject.toml  tailwind.config.js
backend/: config.py  main.py  requirements.txt
backend/bots/: authenticator_bot.py  moderation_bot.py  pack_generator_bot.py  recognizer_bot.py
backend/models/: database.py
backend/services/: queue_manager.py
backend/utils/: validators.py
kalakitchen/: README.md  __init__.py  api.py  cli.py  config.py  models.py  requirements.txt  workflow.py
kalakitchen/bots/: __init__.py  asr.py  claim_extractor.py  keyframe.py  nutrition_mapper.py  quantity_resolver.py  report_generator.py  video_ingest.py  web_enricher.py
kalakitchen/examples/: example_usage.py
src/: App.tsx
src/components/: ErrorBoundary.tsx  LoadingSpinner.tsx
src/components/features/: AuthenticityBadge.tsx  CourseCard.tsx  PackCard.tsx  UploadZone.tsx
src/components/layout/: Footer.tsx  Header.tsx  Navbar.tsx
src/components/recipe/: RecipeCard.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Modal.tsx  ProgressBar.tsx  Toaster.tsx
src/contexts/: AuthContext.tsx  CartContext.tsx  ThemeContext.tsx
src/data/: mockData.ts
src/hooks/: useApi.ts
src/pages/: CategoryPage.tsx  Dashboard.tsx  HomePage.tsx  LandingPage.tsx  MySubmissions.tsx  PackCatalog.tsx  PackMarketplace.tsx  PackViewer.tsx  Profile.tsx  SearchResults.tsx  UploadContent.tsx  UploadPage.tsx
src/services/: api.ts  mockApi.ts
src/types/: index.ts
tests/: test_thadam.py
